# argent-core

./: .gitignore  IMPLEMENTATION_STATUS.md  LEGAL_PILOT_CHECKLIST.md  LICENSE  NOTICE  PILOT_PROFILE.md  POSITIONING_UPDATE.md  PRODUCT.md  README.md  SECURITY_AND_PRIVACY.md  apply-argent-core-docs-reorg.sh  create-repo.sh
contracts/: Cargo.toml
contracts/credit_ledger/: Cargo.toml
contracts/credit_ledger/src/: error.rs  event.rs  lib.rs  test.rs  types.rs
contracts/rewards_ledger/: Cargo.toml  README.md
contracts/rewards_ledger/src/: error.rs  lib.rs  test.rs  types.rs
contracts/settlement_vault/: Cargo.toml
contracts/settlement_vault/src/: lib.rs  test.rs
docs/: DOCUMENT_STATUS_MATRIX.md  README.md  REVIEWER_QUICKSTART.md  TEST_SURFACE_MATRIX.md  argent-architecture.md  argent-dfns-signing-sequence.md  auto-collateralisation-layer.md  bank-integration-and-adapter-strategy.md  bullion-collateral-reference-architecture.md  bullion-collateral-system-design.md  capacity-reservation-and-deliverability.md  collateral-as-locked-value.md  collateral-control.md  collateral-eligibility-and-rights-model.md  collateral-eligibility-and-risk-policy.md  collateral-failure-modes.md  commodity-finance-positioning.md  credit-control-extension-points.md  custodian-as-security-infrastructure.md  deployment-and-runbook.md  design-partner-borrower-brief.md  design-partner-credit-brief.md  design-partner-custodian-brief.md  design-partner-lender-brief.md  design-partners.md  evidence-pack-index.md  facility-walkthrough-manual-vs-controlled.md  go-to-market.md  product-roadmap.md  (+12 more)
(+32 files in other folders)
